--- a/app/src/main/res/layout/item_list_baby.xml
+++ b/app/src/main/res/layout/item_list_baby.xml
@@ -39,25 +39,25 @@
                 android:gravity="center"
                 android:orientation="vertical">
 
-                <com.sundevs.ihsan.homycare.util.font.FontOpenSans
+                <TextView
                     android:id="@+id/txt_nama"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/default_name" />
 
-                <com.sundevs.ihsan.homycare.util.font.FontOpenSans
+                <TextView
                     android:id="@+id/txt_umur"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/default_umur" />
 
-                <com.sundevs.ihsan.homycare.util.font.FontOpenSans
+                <TextView
                     android:id="@+id/txt_alamat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/default_alamat" />
 
-                <com.sundevs.ihsan.homycare.util.font.FontOpenSans
+                <TextView
                     android:id="@+id/txt_jarak"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
