--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -119,4 +119,13 @@
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
+    <Button
+        android:id="@+id/btn_logout"
+        android:layout_width="@dimen/dimen130dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@color/dark_grey_002"
+        android:text="@string/logout"
+
+        android:textColor="@color/white" />
 </LinearLayout>
